password change functionality added

--- a/views/home.html
+++ b/views/home.html
@@ -17,7 +17,7 @@
         <a href="/viewMedicalHistory?email=<%= email %>" class="sidebar-button">View Medical History</a>
         <a href="/viewAppointment?email=<%= email %>" class="sidebar-button">View Appointments</a>
         <a href="/scheduleAppointment?email=<%= email %>" class="sidebar-button">Schedule Appointment</a>
-        <a href="/changePassword?email=<%= email %>" class="sidebar-button">Settings</a>
+        <a href="/settings?email=<%= email %>" class="sidebar-button">Settings</a>
         <a href="/" class="sidebar-button">Sign Out</a>
     </div>
 
