--- a/views/DOC_home.ejs
+++ b/views/DOC_home.ejs
@@ -14,9 +14,8 @@
     </header>
 
     <div id="sidebar">
-        <a href="/viewMedicalHistory?email=<%= email %>" class="sidebar-button">View Medical History</a>
-        <a href="/viewAppointment?email=<%= email %>" class="sidebar-button">View Appointments</a>
-        <a href="/scheduleAppointment?email=<%= email %>" class="sidebar-button">Schedule Appointment</a>
+        <a href="/viewAppointments?email=<%= email %>" class="sidebar-button">Appointments</a>
+        <a href="/viewPatients?email=<%= email %>" class="sidebar-button">View Patients</a>
         <a href="/settings?email=<%= email %>" class="sidebar-button">Settings</a>
         <a href="/signout" class="sidebar-button">Sign Out</a>
     </div>
