--- a/views/DOC_home.ejs
+++ b/views/DOC_home.ejs
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HMS</title>
     <!-- Assuming you have linked necessary stylesheets here -->
-    <link rel="stylesheet" href="../public/stylesheets/home.css">
+    <link rel="stylesheet" href="/stylesheets/home.css">
    
 </head>
 <body>
     <header id="header">
-        <a href="/"><h3>HMS</h3></a>
+        <a href="/"><h3>HMS <%= email %></h3></a>
     </header>
 
     <div id="sidebar">
