--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HMS</title>
     <!-- Assuming you have linked necessary stylesheets here -->
-    <link rel="stylesheet" href="../public/stylesheets/home.css">
+    <link rel="stylesheet" href="/stylesheets/home.css">
    
 </head>
 <body>
@@ -26,7 +26,7 @@
             <h1 >HMS</h1>
         </div>
         <div class="main-content">
-            <h2 class="main-heading">Welcome <%= name %></h2>
+            <h2 class="main-heading">Welcome <%= name %>  <%= email %></h2>
         </div>
     </div>
 
