--- a/views/settings_page.ejs
+++ b/views/settings_page.ejs
@@ -15,7 +15,8 @@
     </header>
     <div class="main-container">
         <h3>Password Change <%= email %> </h3>  <!-- remove email later. it is just for testing -->
-        <form id="password-change-form" action="changePassword?email=<%= email %>">
+        <form id="password-change-form" action="changePassword?email=<%= email %>" method="post">
+
             <label for="oldPassword">Old password</label>
             <input type="password" id="oldPassword" name="oldPassword" required><br>
             <label for="newPassword">New password</label>
