patient functionality 1 added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,7 +17,7 @@
         <a href="/viewMedicalHistory?email=<%= email %>" class="sidebar-button">View Medical History</a>
         <a href="/viewAppointment?email=<%= email %>" class="sidebar-button">View Appointments</a>
         <a href="/scheduleAppointment?email=<%= email %>" class="sidebar-button">Schedule Appointment</a>
-        <a href="/settings?email=<%= email %>" class="sidebar-button">Settings</a>
+        <a href="/Patient_settings?email=<%= email %>" class="sidebar-button">Settings</a>
         <a href="/signout" class="sidebar-button">Sign Out</a>
     </div>
 
@@ -26,7 +26,7 @@
             <h1 >HMS</h1>
         </div>
         <div class="main-content">
-            <h2 class="main-heading">Welcome <%= name %>  <%= email %></h2>
+            <h2 class="main-heading">Welcome <%= name %></h2>
         </div>
     </div>
 
