--- a/views/DOC_home.ejs
+++ b/views/DOC_home.ejs
@@ -10,13 +10,13 @@
 </head>
 <body>
     <header id="header">
-        <a href="/"><h3>HMS <%= email %></h3></a>
+        <a href="/"><h3>HMS</h3></a>
     </header>
 
     <div id="sidebar">
         <a href="/viewAppointments?email=<%= email %>" class="sidebar-button">Appointments</a>
         <a href="/viewPatients?email=<%= email %>" class="sidebar-button">View Patients</a>
-        <a href="/settings?email=<%= email %>" class="sidebar-button">Settings</a>
+        <a href="/Doc_settings?email=<%= email %>" class="sidebar-button">Settings</a>
         <a href="/signout" class="sidebar-button">Sign Out</a>
     </div>
 
@@ -25,7 +25,7 @@
             <h1 >HMS</h1>
         </div>
         <div class="main-content">
-            <h2 class="main-heading">Welcome <%= name %></h2>
+            <h2 class="main-heading">Welcome Dr.<%= name %></h2>
         </div>
     </div>
 
