--- a/views/settings_doc.ejs
+++ b/views/settings_doc.ejs
@@ -15,7 +15,7 @@
     </header>
     <div class="main-container">
         <h3>Password Change <%= email %> </h3>  <!-- remove email later. it is just for testing -->
-        <form id="password-change-form" action="changePassword?email=<%= email %>" method="post">
+        <form id="password-change-form" action="changePasswordDoc?email=<%= email %>" method="post">
 
             <label for="oldPassword">Old password</label>
             <input type="password" id="oldPassword" name="oldPassword" required><br>
