--- a/views/viewOneHistory.ejs
+++ b/views/viewOneHistory.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HMS</title>
     <style>
-         body {
+        body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -13,8 +13,8 @@
         .main-header {
             background-color: black;
             color: white;
-            text-align: center;
-            padding: 10px 0;
+            text-align: left;
+            padding: 10px 10px;
         }
         .container {
             max-width: 800px;
