--- a/views/DOC_home.ejs
+++ b/views/DOC_home.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header id="header">
-        <a href="/"><h3>HMS</h3></a>
+        <a href="/"><h3></h3></a>
     </header>
 
     <div id="sidebar">
