--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HMS</title>
-    <!-- Assuming you have linked necessary stylesheets here -->
     <link rel="stylesheet" href="/stylesheets/home.css">
-   
 </head>
 <body>
     <header id="header">
-        <a href="/"><h3>HMS</h3></a>
+        <a href="/"><h3></h3></a>
     </header>
 
     <div id="sidebar">
@@ -29,7 +27,5 @@
             <h2 class="main-heading">Welcome <%= name %></h2>
         </div>
     </div>
-
-    <!-- You may need to include necessary scripts here -->
 </body>
 </html>
