--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,34 +1,45 @@
 /* CSS styling */
 body {
     margin: 0;
-    font-family: 'Lato', sans-serif;
-    background-color: #ffffff;
+    font-family: Arial, sans-serif;
+    background-color: #f5f5f5;
     display: flex;
     min-height: 100vh;
+    animation: fadeIn 2.5s ease-in;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 #header {
-    background-color: #000000;
-    padding: 2px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid grey;
+    background-color: #2c3e50;
+    color: #ffffff;
+    text-align: center;
+    padding: 20px;
 }
 
 #header a {
     color: inherit;
     text-decoration: inherit;
 }
+
 a {
     text-decoration: none;
 }
+
 a.sidebar-button {
-    color: inherit; /* Or specify your desired color */
+    color: inherit;
 }
+
 #sidebar {
     width: 300px;
-    background-color: #000000;
+    background-color: #2c3e50;
     padding-top: 77px;
     color: #ffffff;
     display: flex;
@@ -36,10 +47,10 @@ a.sidebar-button {
 }
 
 .sidebar-button {
-    padding: 20px 24px; /* Increased padding for larger buttons */
+    padding: 20px 24px;
     cursor: pointer;
     transition: background-color 0.3s;
-    font-size: 20px; /* Increased font size for larger buttons */
+    font-size: 20px;
 }
 
 .sidebar-button:hover {
@@ -47,7 +58,7 @@ a.sidebar-button {
 }
 
 .sidebar-button:not(:last-child) {
-    margin-bottom: 5px; /* Adjust spacing between buttons */
+    margin-bottom: 5px;
 }
 
 #main {
@@ -58,21 +69,24 @@ a.sidebar-button {
 .main-content {
     text-align: center;
 }
+
 .main-content2 {
-    background-color: #000000;
+    background-color: #2c3e50;
     color: azure;
     text-align: center;
 }
 
 .main-heading {
-    color: #000000;
+    color: #2c3e50
 }
-h1{
-  padding-top: 10px;
-  margin-top: 0px;
-  padding-bottom: 10px;
-  font-size: 50px;
+
+h1 {
+    padding-top: 10px;
+    margin-top: 0px;
+    padding-bottom: 10px;
+    font-size: 50px;
 }
-h2{
-  font-size: 50px;
+
+h2 {
+    font-size: 50px;
 }
