--- a/public/stylesheets/settings.css
+++ b/public/stylesheets/settings.css
@@ -1,8 +1,7 @@
 /* CSS styles */
 .app-bar {
-    background: #000000;
-    padding-left: 20px;
-    padding-top: 0px;
+    background-color: #2c3e50; /* Dark blue color */
+    padding: 20px;
     color: #ffffff;
     position: fixed;
     top: 0;
@@ -12,10 +11,15 @@
 }
 
 .main-container {
-    padding-left: 8px;
-    padding-top: 20px;
-    padding-right: 20px;
-    margin-top: 100px; /* Adjusted margin-top to account for the fixed header */
+    color:#2c3e50 ;
+    padding: 20px; /* Adjust padding for content */
+    margin-top: 80px; /* Adjusted margin-top to account for the fixed header */
+}
+h1 {
+    margin: 0px;
+}
+h3{
+    color: #2c3e50;
 }
 
 form {
@@ -24,24 +28,31 @@ form {
 
 label {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+    color: #333333; /* Darker color for better contrast */
 }
 
 input[type="password"] {
     width: 100%;
     padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px; /* Increased bottom margin for better spacing */
     border: none;
-    border-bottom: 1px solid #000000; /* Adding a bottom border instead of a box */
-    background-color: transparent; /* Making the background transparent */
+    border-bottom: 1px solid #2c3e50; /* Dark blue color for the bottom border */
+    background-color: transparent;
+    font-size: 16px; /* Match font size with other input elements */
 }
 
 button {
     margin-top: 30px;
-    padding: 10px; /* Set padding to make button circular */
-    background-color: #000000;
+    padding: 12px 24px; /* Adjust padding for better button appearance */
+    background-color: #2c3e50; /* Dark blue color */
     color: #ffffff;
     border: none;
     cursor: pointer;
-    border-radius: 20px /* Make the button circular */
+    border-radius: 5px; /* Maintain rounded corners */
+    transition: background-color 0.3s; /* Smooth transition for hover effect */
+}
+
+button:hover {
+    background-color: #34495e; /* Darker blue color on hover */
 }
