--- a/views/viewAppt.ejs
+++ b/views/viewAppt.ejs
@@ -119,7 +119,7 @@
         /* Timer strip animation */
         .timer-strip {
             height: 4px;
-            background-color: #000000; /* Changed to black for contrast */
+            background-color: #FFD700; /* Changed to black for contrast */
             width: 100%;
             animation: decreaseWidth 5s linear forwards;
         }
