--- a/views/settings_doc.ejs
+++ b/views/settings_doc.ejs
@@ -98,7 +98,7 @@
     
         .timer-strip {
             height: 4px;
-            background-color: #2c3e50;
+            background-color: #FFD700;
             width: 100%;
             animation: decreaseWidth 4.5s linear forwards;
         }
