--- a/views/viewDiagnosis.ejs
+++ b/views/viewDiagnosis.ejs
@@ -115,7 +115,7 @@
         /* Timer strip animation */
         .timer-strip {
             height: 4px;
-            background-color: #2c3e50;
+            background-color: #FFD700;
             width: 100%;
             animation: decreaseWidth 4.5s linear forwards;
         }
