--- a/views/view_table.ejs
+++ b/views/view_table.ejs
@@ -89,7 +89,7 @@
 
     .timer-strip {
         height: 4px;
-        background-color: #2c3e50;
+        background-color: #FFD700;
         /* background-color: #FFD700 ; */
         width: 100%;
         animation: decreaseWidth 4.5s linear forwards;
